# ai-engineering-bootcamp-prerequisites

./: Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
apps/api/: Dockerfile  pyproject.toml
apps/api/src/api/: app.py
apps/chatbot_ui/: Dockerfile  pyproject.toml
apps/chatbot_ui/src/chatbot_ui/: app.py
apps/chatbot_ui/src/chatbot_ui/core/: config.py
notebooks/prerequisites/: 01-llm-apis.ipynb
src/: app.py
