[project]
name = "ai-engineering-bootcamp-prerequisites"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.8.0",
    "groq>=1.4.0",
    "ipykernel>=7.3.0",
    "openai>=2.41.1",
    "python-dotenv>=1.2.2",
]
