[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Poonnakarn Panjasriprakarn", email = "poonnakarn@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.1",
    "google-genai>=2.8.0",
    "groq>=1.4.0",
    "openai>=2.41.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "uvicorn>=0.49.0",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[tool.uv.source]
shared = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.hatch.build.targets.sdist]
include = [
    "src/api",
    "tests/",
    "README.md",
]
