[project]
name = "chatbot-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Poonnakarn Panjasriprakarn", email = "poonnakarn@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "streamlit>=1.58.0",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[tool.uv.source]
shared = { workspace = true }

[tool.uv.build-backend]
module-root = "src"
module-name = "chatbot_ui"
source-include = ["tests/**"]
